infra/k8s/local/ingress/skillsly-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: skillsly-backend-ingress.yaml
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: "api.skillsly.io"
      http:
        paths:
          - pathType: Prefix
            path: /graphql
            backend:
              service:
                name: skillsly-ag-srv
                port:
                  name: api-gateway

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: skillsly-frontend-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/cors-allow-origin: '*'
#    nginx.ingress.kubernetes.io/enable-cors: 'true'
#    nginx.ingress.kubernetes.io/use-regex: 'true'
#    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#spec:
#  ingressClassName: nginx
#  rules:
#    - host: "skillsly.dev"
#      http:
#        paths:
#          - pathType: Prefix
#            path: /?(.*)
#            backend:
#              service:
#                name: skillsly-wa-srv
#                port:
#                  name: wa
